Update css and html.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,20 @@
   </head>
   <body>
     <!-- Header -->
+    <div class="banner">
+      <h1>Broadway Design</h1>
 
     <!-- Nav -->
+      <nav>
+        <ul class="nav">
+          <li><a href="#">Home</a></li>
+          <li><a href="#process">Process</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#team">Team</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
 
     <!-- About -->
 
