--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav>
         <ul class="nav">
           <li><a href="#">Home</a></li>
-          <li><a href="#process">Process</a></li>
+          <li><a href="#process">About</a></li>
           <li><a href="#work">Work</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
@@ -23,14 +23,52 @@
     </div>
 
     <!-- About -->
+    <div id="process">
+      <h2>Our Process</h2>
+
+      <img src="resources/images/identify.svg" />
+      <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
+
+      <img src="resources/images/understand.svg" />
+      <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
+
+      <img src="resources/images/execute.svg" />
+      <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
 
     <!-- Portfolio -->
+    <div class="banner">
+      <h3>Designed in New York</h3>
+    </div>
+    <div id="work">
+      <h3>Portfolio</h3>
+      <p>Coming Soon</p>
+    </div>
 
     <!-- Team -->
+    <div id="team">
+      <h3>Team</h3>
+      <p>We're Hiring!</p>
+    </div>
 
     <!-- Contact -->
+    <div id="contact">
+      <h3>Contact</h3>
+      <p>Phone: (555)555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
+    </div>
 
     <!-- Footer -->
+    <div class="footer">
+      <p class="footer">&copy; Broadway 2016
+        <a href="#">Home</a>
+        <a href="#process">About</a>
+        <a href="#work">Work</a>
+        <a href="#team">Team</a>
+        <a href="#contact">Contact</a>
 
   </body>
 </html>
